[tool.poetry]
name = "akamai-ccu-purge"
version = "0.1.0"
description = "A simple script to flush url's or cp-code's in akamai"
authors = ["psadi <adithya3494@gmail.com>"]
license = "MIT"
packages = [
    { include = "ccu_purge.py" }
]

[tool.poetry.scripts]
ccu_purge = "ccu_purge:main"

[tool.poetry.dependencies]
python = "^3.7"
certifi = "2020.12.5"
cffi = "1.14.5"
chardet = "4.0.0"
cryptography = "3.4.7"
edgegrid-python = "1.1.1"
idna = "2.10"
ndg-httpsclient = "0.5.1"
pyasn1 = "0.4.8"
pycparser = "2.20"
pyOpenSSL = "20.0.1"
requests = "2.25.1"
six = "1.15.0"
urllib3 = "1.25.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
